[tool.poetry]
name = "brainly-moderation-hub-api"
version = "0.1.0"
description = "API of the ultimate moderation hub for Brainly moderators"
authors = ["vlaex <https://t.me/vlaex>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.0"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"
django-timescaledb = "^0.2.13"
python-graphql-client = "^0.4.3"
django-debug-toolbar = "^4.2.0"
gunicorn = "^21.2.0"
httpx = {extras = ["http2"], version = "^0.26.0"}
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"